--- a/moncode/mysite/templates/footer.html
+++ b/moncode/mysite/templates/footer.html
@@ -1,5 +1,5 @@
 <footer>
-    <h5 class="footer-mentions">Mentions</h5>
+    <h5 class="footer-mentions">Infos</h5>
     <section class="footer-text">
             Ce site a été réalisé dans le cadre d'un examen d'école sur l'entreprise ©Mercadona.
         <br>
