--- a/templates/footer.html
+++ b/templates/footer.html
@@ -1,3 +1,49 @@
 <footer>
   <!-- Footer -->
+<hr>
+
+  <div class="content-footer">
+
+    <div class="blo footer-infos">
+
+      <h3>Informations</h3>
+
+      <p>N'attendez plus, contactez nous</p>
+      <p>??-??-??-??</p>
+      <p>support.client@contact.com</p>
+      <p>4 Rue de par là, Paris </p>
+
+    </div>
+
+    <div class="blo footer-services">
+
+      <h3>Horaires</h3>
+
+      <ul class="liste-horaires">
+        <li>lun.:  08:45 - 12/00, 14/00 - 18/00</li>
+        <li>mar.:  08:45 - 12/00, 14/00 - 18/00</li>
+        <li>mer.:  08:45 - 12/00, 14/00 - 18/00</li>
+        <li>jeu.:  08:45 - 12/00, 14/00 - 18/00</li>
+        <li>ven.:  08:45 - 12/00, 14/00 - 18/00</li>
+        <li>sam.:  08:45 - 12/00</li>
+        <li>dim.:  Fermé</li>
+      </ul>
+
+    </div>
+
+    <div class="blo footer-services">
+
+      <h3>Nos Services</h3>
+
+      <ul class="services-list">
+        <li><a href="#"></a>Accueil</li>
+        <li><a href="#"></a>Catalogue</li>
+        <li><a href="#"></a>Horaires</li>
+        <li><a href="#"></a>Contacts</li>
+      </ul>
+
+    </div>
+
+  </div>
+  
 </footer>
