--- a/templates/footer.html
+++ b/templates/footer.html
@@ -11,7 +11,7 @@
       <p>N'attendez plus, contactez nous</p>
       <p>??-??-??-??</p>
       <p>support.client@contact.com</p>
-      <p>4 Rue de par là, Paris </p>
+      <p>4 Rue de par là bas, Paris </p>
 
     </div>
 
@@ -20,12 +20,12 @@
       <h3>Horaires</h3>
 
       <ul class="liste-horaires">
-        <li>lun.:  08:45 - 12/00, 14/00 - 18/00</li>
-        <li>mar.:  08:45 - 12/00, 14/00 - 18/00</li>
-        <li>mer.:  08:45 - 12/00, 14/00 - 18/00</li>
-        <li>jeu.:  08:45 - 12/00, 14/00 - 18/00</li>
-        <li>ven.:  08:45 - 12/00, 14/00 - 18/00</li>
-        <li>sam.:  08:45 - 12/00</li>
+        <li>lun.:  08:45 - 12:00, 14:00 - 18:00</li>
+        <li>mar.:  08:45 - 12:00, 14:00 - 18:00</li>
+        <li>mer.:  08:45 - 12:00, 14:00 - 18:00</li>
+        <li>jeu.:  08:45 - 12:00, 14:00 - 18:00</li>
+        <li>ven.:  08:45 - 12:00, 14:00 - 18:00</li>
+        <li>sam.:  08:45 - 12:00</li>
         <li>dim.:  Fermé</li>
       </ul>
 
@@ -35,11 +35,12 @@
 
       <h3>Nos Services</h3>
 
-      <ul class="services-list">
-        <li><a href="#"></a>Accueil</li>
-        <li><a href="#"></a>Catalogue</li>
-        <li><a href="#"></a>Horaires</li>
-        <li><a href="#"></a>Contacts</li>
+      <ul class="liste-services">
+        <li><a href="../garage/templates/garage/home.html">Accueil</a></li>
+        <li><a href="#">Catalogue</a></li>
+        <li><a href="#">Horaires</a></li>
+        <li><a href="#">Contacts</a></li>
+        <li><a href="#">Connexion</a></li>
       </ul>
 
     </div>
