header et footer

--- a/garage/templates/garage/home.html
+++ b/garage/templates/garage/home.html
@@ -1,13 +1,40 @@
 {% extends "layout.html" %}
 
 {% block content %}
+</header>
+        <h1>Garage V. Parrot</h1>
+        <h3>Nos meilleurs éléments à votre service !</h3>
+                <a href=""><button class="exept" type="button">Connexion</button></a>
+        <h5>Pas encore inscrit ? <br>N'attendez plus : <a href="#"><br>Je m'inscris !</a></h5>
+<header>
+        
 
-<p>Bienvenue sur mon site web!</p>
 
-<ul class="pouet">
-        <li>bim</li>
-        <li>bam</li>
-        <li>boum</li>
-</ul>
+
+        <section class="main" id="infos">
+
+                <div class="content">
+                        <div class="card">   
+                                <div class="left">
+                                        <h1>Infos</h1>
+                                        <p>Bonjour et bienvenue blablabla</p>
+                                </div>
+                                <div class="right">
+                                        <img src="Images/Mr Parrot.jpg" alt="">
+                                </div>
+                        </div>
+
+                        <div class="card">   
+                                <div class="left">
+                                        <h1>Contacts</h1>
+                                        <p>Nos horaires</p>
+                                </div>
+                                <div class="right">
+                                        <img src="" alt="">
+                                </div>
+                        </div>
+                </div>
+
+        </section>
 
 {% endblock %}
