--- a/templates/header.html
+++ b/templates/header.html
@@ -1,3 +1,15 @@
-<div>
-  <!-- Header -->
-</div>
+<header>
+<!-- Header --> 
+
+<nav>
+    <h1>Garage V.Parrot</h1>
+    <div class="onglets">
+      <a href="#">Home</a>
+      <a href="#"></a>
+      <a href="#"></a>
+      <a href="#">Catalogue</a>
+      <a href="#">Connexion</a>
+    </div>
+  </nav>
+
+</header>
