--- a/garage/templates/garage/services.html
+++ b/garage/templates/garage/services.html
@@ -1,25 +1,7 @@
 {% extends "layout.html" %}
 
 {% block content %}
-
-<div class="service-container">
-
-  {% for service in service_list %}
-
-  <div class="service-item">
-    <div class="service-img">
-      <img src="{{ service.picture.url}}" />
-    </div>
-    <div class="service-info">
-      <h4>{{ service.name }}</h4>
-      <p class="service-desc">{{ service.price }}</p>
-    </div>
-  </div>
-
-  {% endfor %}
-
-</div>
-
-
-
+<div id="services-list" class="service-container"></div>
 {% endblock %}
+
+
