--- a/garage/templates/garage/home.html
+++ b/garage/templates/garage/home.html
@@ -1,40 +1,36 @@
 {% extends "layout.html" %}
 
 {% block content %}
-</header>
-        <h1>Garage V. Parrot</h1>
-        <h3>Nos meilleurs éléments à votre service !</h3>
-                <a href=""><button class="exept" type="button">Connexion</button></a>
-        <h5>Pas encore inscrit ? <br>N'attendez plus : <a href="#"><br>Je m'inscris !</a></h5>
-<header>
+<!-- </header> -->
+<!--         <h1>Garage V. Parrot</h1> -->
+<!--         <h3>Nos meilleurs éléments à votre service !</h3> -->
+<!--                 <a href=""><button class="exept" type="button">Connexion</button></a> -->
+<!--         <h5>Pas encore inscrit ? <br>N'attendez plus : <a href="#"><br>Je m'inscris !</a></h5> -->
+<!-- <header> -->
         
+<section class="infobox">
+        <div class="infotitle">
+                <h1>Nos Services</h1>
+                <p>blablabla</p>
+        </div>
+        <div id="services-list" class="service-container infodesc"></div>
+</section>
 
+<section class="infobox">
+        <div class="infotitle">
+                <h1>Infos</h1>
+                <p>Bonjour et Bienvenue</p>
+        </div>
+        <div class="infodesc">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Curabitur tempor arcu vel elit lacinia tincidunt. Sed molestie ante nec urna vehicula, eget faucibus elit tempor. Cras consectetur tempor mi venenatis dapibus. Cras volutpat dui quis lectus aliquam tempus nec vitae sapien. Vivamus porta lacinia sem, sed tristique urna blandit quis. In non feugiat lectus, quis imperdiet neque. Fusce aliquet quam id nulla porta commodo. Donec eu leo diam. Fusce tincidunt, turpis quis cursus luctus, sem tellus pellentesque lorem, at molestie orci mi a nibh. Etiam porta justo non ex venenatis convallis. Sed pellentesque nibh eget quam viverra, vitae viverra lorem tincidunt. Sed vel eros non dolor rutrum suscipit eget vel leo. Phasellus aliquam a sapien ut hendrerit.</div>
+</section>
 
+<section class="infobox">
+        <div class="infotitle">
+                <h1>Contacts</h1>
+                <p>Nos Horaires</p>
+        </div>
+        <div class="infodesc">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Curabitur tempor arcu vel elit lacinia tincidunt. Sed molestie ante nec urna vehicula, eget faucibus elit tempor. Cras consectetur tempor mi venenatis dapibus. Cras volutpat dui quis lectus aliquam tempus nec vitae sapien. Vivamus porta lacinia sem, sed tristique urna blandit quis. In non feugiat lectus, quis imperdiet neque. Fusce aliquet quam id nulla porta commodo. Donec eu leo diam. Fusce tincidunt, turpis quis cursus luctus, sem tellus pellentesque lorem, at molestie orci mi a nibh. Etiam porta justo non ex venenatis convallis. Sed pellentesque nibh eget quam viverra, vitae viverra lorem tincidunt. Sed vel eros non dolor rutrum suscipit eget vel leo. Phasellus aliquam a sapien ut hendrerit.</div>
+</section>
 
-        <section class="main" id="infos">
-
-                <div class="content">
-                        <div class="card">   
-                                <div class="left">
-                                        <h1>Infos</h1>
-                                        <p>Bonjour et bienvenue blablabla</p>
-                                </div>
-                                <div class="right">
-                                        <img src="Images/Mr Parrot.jpg" alt="">
-                                </div>
-                        </div>
-
-                        <div class="card">   
-                                <div class="left">
-                                        <h1>Contacts</h1>
-                                        <p>Nos horaires</p>
-                                </div>
-                                <div class="right">
-                                        <img src="" alt="">
-                                </div>
-                        </div>
-                </div>
-
-        </section>
 
 {% endblock %}
