--- a/static/css/style.css
+++ b/static/css/style.css
@@ -9,7 +9,8 @@ html {
 body{
   margin: 0;
   padding: 0;
-  font-family: 'Courier New', Courier, monospace
+  font-family: 'Courier New', Courier, monospace;
+  background-color: #444; 
 }
 
 /***************/
@@ -90,38 +91,44 @@ header h5 {
 /*** MAIN CONTENT ***/
 /********************/
 
-.main {
-  margin-top: 40px;
-  display: flex;
-  flex-direction: column;
-  align-items: center;
+.infobox {
+  width: 80%;
+  min-width: 600px;
+  margin: 25px auto;
+  background: linear-gradient(135deg, #3c3c3c, #000000); /* Dark automotive gradient background */
+  border-radius: 20px;
+  box-shadow: 0 0 10px rgba(0, 0, 0, 0.3);
+  padding: 20px;
+  text-align: center;
+  transition: transform 0.3s ease-in-out;
+}
+
+.infobox:hover {
+  transform: scale(1.05);
+}
+
+.infotitle {
+  color: #ff9900; /* Bright orange text color (common in automotive logos) */
+  background-color: #333333; /* Dark gray background color */
+  padding: 20px;
+  border-radius: 15px;
+  font-size: 24px;
+  text-transform: uppercase;
+  text-shadow: 2px 2px 4px rgba(0, 0, 0, 0.2);
+  box-shadow: 0 0 10px rgba(0, 0, 0, 0.3);
+}
+
+.infodesc {
+  padding: 20px;
+  font-style: italic;
+  color: #999; /* Light gray text color */
+  background-color: #f7f7f7; /* Light gray background */
+  border-radius: 10px;
+  box-shadow: 0 0 5px rgba(0, 0, 0, 0.1);
 }
 
 
-.main .content .card {
-  display: flex;
-  flex-wrap: wrap;
-  justify-content: center;
-  margin-bottom: 18px;
 
-}
-
-.main .content .card .left {
-  flex: 0 0 25%;
-  padding : 20px;
-  background-color: #0E2954;
-  color: #84A7A1;
-}
-
-.main .content .card.right {
-  flex: 0 0 75%;
-}
-
-.main .content .card .right img {
-  height: 300px;
-  width: 400px;
-  margin-top: 5px;
-}
 
 /**************/
 /*** FOOTER ***/
