Create administration home page

--- a/templates/header.html
+++ b/templates/header.html
@@ -8,7 +8,7 @@
       <a href="#"></a>
       <a href="#">Catalogue</a>
       {% if user.is_authenticated %}
-      <a href="/services/admin.html">Administration</a>
+      <a href="/admin/home.html">Administration</a>
       <a href="/logout.html">Déconnexion</a>
       {% else %}
       <a href="/login.html">Connexion</a>
