--- a/templates/footer.html
+++ b/templates/footer.html
@@ -3,18 +3,16 @@
   <h1>Contacts</h1>
   <div>
       <div class="contacts">
+          {% if opening_hours %}
           <div class="contact">
               <h2>Assistance 24h/24</h2>
               <ul class="liste-horaires">
-                <li>lun.:  08:45 - 12:00, 14:00 - 18:00</li>
-                <li>mar.:  08:45 - 12:00, 14:00 - 18:00</li>
-                <li>mer.:  08:45 - 12:00, 14:00 - 18:00</li>
-                <li>jeu.:  08:45 - 12:00, 14:00 - 18:00</li>
-                <li>ven.:  08:45 - 12:00, 14:00 - 18:00</li>
-                <li>sam.:  08:45 - 12:00</li>
-                <li>dim.:  Fermé</li>
+                {% for opening_hour in opening_hours %}
+                  <li>{{opening_hour}}</li>
+                {% endfor %}
               </ul>
           </div>
+          {% endif %}
           <div class="contact">
               <h2>Garantie constructeur préservée</h2>
               <p> Lorem ipsum dolor, sit amet consectetur adipisicing elit. Officia excepturi repellat omnis aspernatur sequi tempore cum dignissimos illum? Dolore iusto mollitia laborum sint labore aut hic nobis similique ex quo.</p>
