Add product list

--- a/templates/header.html
+++ b/templates/header.html
@@ -6,7 +6,7 @@
     <div class="onglets">
       <a href="#"></a>
       <a href="#"></a>
-      <a href="#">Catalogue</a>
+      <a href="/parc.html">Véhicules</a>
       {% if user.is_authenticated %}
       <a href="/admin/home.html">Administration</a>
       <a href="/logout.html">Déconnexion</a>
