--- a/templates/header.html
+++ b/templates/header.html
@@ -4,9 +4,7 @@
 <nav>
     <h1><a href="/">Garage V.Parrot</a></h1>
     <div class="onglets">
-      <a href="#"></a>
-      <a href="#"></a>
-      <a href="/parc.html">Véhicules</a>
+      <a href="/catalog.html">Véhicules</a>
       {% if user.is_authenticated %}
       <a href="/admin/home.html">Administration</a>
       <a href="/logout.html">Déconnexion</a>
