Je sais pas ce que j'ai fait

--- a/garage/templates/garage/admin_services.html
+++ b/garage/templates/garage/admin_services.html
@@ -21,7 +21,7 @@
         <!-- Formulaire modification service -->
         <div class="col admin-service-details-wrapper border-me">
             <div class="row">
-               <form id="admin-service-details-form" method="post" action="admin.html" enctype="multipart/form-data">
+               <form id="admin-service-details-form" method="post" action="services.html" enctype="multipart/form-data">
                     {% csrf_token %}
                     <div class="row">
                         <div class="col">
