--- a/static/css/style.css
+++ b/static/css/style.css
@@ -15,7 +15,7 @@ body{
   margin: 0;
   padding: 0;
   font-family: 'Courier New', Courier, monospace;
-  background-color: #444; 
+  background-color: #DCA; 
 }
 
 /***************/
