Work on timetable edition

--- a/garage/templates/garage/admin_home.html
+++ b/garage/templates/garage/admin_home.html
@@ -6,7 +6,7 @@
   <li><a href="/admin/services.html">Gestion des Services</a></li>
   <li>Gestion des Utilisateurs</li>
   <li>Gestion des Véhicules</li>
-  <li>Gestion des Horaires</li>
+  <li><a href="/admin/marketing.html">Gestion des Horaires</a></li>
 </ul>
 
 {% endblock %}
