--- a/templates/layout.html
+++ b/templates/layout.html
@@ -26,6 +26,7 @@
             {% if page_script %}
             <script src="{% static page_script %}"></script>
             {% endif %}
+            {% include "form.html" %}
         {% include "footer.html" %}
     </body>
 </html>
