--- a/static/css/style.css
+++ b/static/css/style.css
@@ -15,7 +15,7 @@ body{
   margin: 0;
   padding: 0;
   font-family: 'Courier New', Courier, monospace;
-  background-color: #444; 
+  background-color: #DCA; 
 }
 
 /***************/
@@ -284,4 +284,8 @@ footer #contact {
 
 #admin-service-details-form .row {
   margin: 15px auto 15px auto;
+}
+
+.inline-me {
+    display: inline;
 }
