màj formulaire et catalogue

--- a/garage/templates/garage/catalog.html
+++ b/garage/templates/garage/catalog.html
@@ -4,4 +4,14 @@
         
 <div id="product-list" class="service-container"></div>
 
+<section class="infobox">
+    <div class="infotitle">
+            <h1>Contactez-nous</h1>
+            <p>Formulaire, téléphone et adresse</p>
+    </div>
+    <div class="infodesc">
+            {% include "form.html" %}
+    </div>
+</section>
 {% endblock %}
+
