--- a/templates/footer.html
+++ b/templates/footer.html
@@ -1,6 +1,6 @@
 <footer>
 <!-- Footer -->
-  <h1>Contacts</h1>
+  <h1>À propos</h1>
   <div>
       <div class="contacts">
           {% if opening_hours %}
