--- a/garage/templates/garage/home.html
+++ b/garage/templates/garage/home.html
@@ -12,7 +12,7 @@
 <section class="infobox">
         <div class="infotitle">
                 <h1>Nos Services</h1>
-                <p>blablabla</p>
+                <p>Trouvez ce dont vous avez besoin</p>
         </div>
         <div id="services-list" class="service-container infodesc"></div>
 </section>
@@ -22,15 +22,22 @@
                 <h1>Infos</h1>
                 <p>Bonjour et Bienvenue</p>
         </div>
-        <div class="infodesc">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Curabitur tempor arcu vel elit lacinia tincidunt. Sed molestie ante nec urna vehicula, eget faucibus elit tempor. Cras consectetur tempor mi venenatis dapibus. Cras volutpat dui quis lectus aliquam tempus nec vitae sapien. Vivamus porta lacinia sem, sed tristique urna blandit quis. In non feugiat lectus, quis imperdiet neque. Fusce aliquet quam id nulla porta commodo. Donec eu leo diam. Fusce tincidunt, turpis quis cursus luctus, sem tellus pellentesque lorem, at molestie orci mi a nibh. Etiam porta justo non ex venenatis convallis. Sed pellentesque nibh eget quam viverra, vitae viverra lorem tincidunt. Sed vel eros non dolor rutrum suscipit eget vel leo. Phasellus aliquam a sapien ut hendrerit.</div>
+        <div class="infodesc">
+                <p>Vous pourrez retrouver notre catalogue de services et de voitures disponibles en ligne.</p>
+                <p>Le site est en construction, vous retrouverez bientôt plus de choix.</p>
+                <p>Merci pour votre patience !</p>
+                <p>En attendant, vous pouvez passer nous voir au garage pendant nos heures d'ouverture, on vous attend.</p>
+        </div>
 </section>
 
 <section class="infobox">
         <div class="infotitle">
-                <h1>Contacts</h1>
-                <p>Nos Horaires</p>
+                <h1>Contactez-nous</h1>
+                <p>Formulaire, téléphone et adresse</p>
         </div>
-        <div class="infodesc">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Curabitur tempor arcu vel elit lacinia tincidunt. Sed molestie ante nec urna vehicula, eget faucibus elit tempor. Cras consectetur tempor mi venenatis dapibus. Cras volutpat dui quis lectus aliquam tempus nec vitae sapien. Vivamus porta lacinia sem, sed tristique urna blandit quis. In non feugiat lectus, quis imperdiet neque. Fusce aliquet quam id nulla porta commodo. Donec eu leo diam. Fusce tincidunt, turpis quis cursus luctus, sem tellus pellentesque lorem, at molestie orci mi a nibh. Etiam porta justo non ex venenatis convallis. Sed pellentesque nibh eget quam viverra, vitae viverra lorem tincidunt. Sed vel eros non dolor rutrum suscipit eget vel leo. Phasellus aliquam a sapien ut hendrerit.</div>
+        <div class="infodesc">
+                {% include "form.html" %}
+        </div>
 </section>
 
 
